--- a/Passeio/Base.lproj/Main.storyboard
+++ b/Passeio/Base.lproj/Main.storyboard
@@ -64,7 +64,13 @@
                             <outlet property="delegate" destination="Rrd-tF-F5I" id="yo0-sd-YhW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Tracks" id="65D-eX-GEZ"/>
+                    <navigationItem key="navigationItem" title="Tracks" id="65D-eX-GEZ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kX0-Fh-IBU">
+                            <connections>
+                                <action selector="record:" destination="Rrd-tF-F5I" id="QTb-jS-iXE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pyQ-dr-YZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
