--- a/Passeio/Base.lproj/Main.storyboard
+++ b/Passeio/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                 <splitViewController id="RSj-lY-2Lr" sceneMemberID="viewController">
                     <connections>
                         <segue destination="oCw-Ko-svS" kind="relationship" relationship="masterViewController" id="Je8-jC-hAF"/>
-                        <segue destination="SqE-Tr-J6C" kind="relationship" relationship="detailViewController" id="oUf-uy-lUb"/>
+                        <segue destination="gMT-yU-WnL" kind="relationship" relationship="detailViewController" id="Waf-1k-lhb"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JqW-j8-S3S" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -31,7 +31,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Track Summary Cell" textLabel="ncd-RB-XvE" detailTextLabel="wTF-1d-yIY" style="IBUITableViewCellStyleSubtitle" id="iRE-oc-ZeT">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="Track Summary Cell" textLabel="ncd-RB-XvE" detailTextLabel="wTF-1d-yIY" style="IBUITableViewCellStyleSubtitle" id="iRE-oc-ZeT">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iRE-oc-ZeT" id="zkX-Xs-SZn">
@@ -55,7 +55,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="SqE-Tr-J6C" kind="show" identifier="Map Editor" id="5do-Z3-kDI"/>
+                                    <segue destination="gMT-yU-WnL" kind="showDetail" identifier="Map Editor" id="R2U-qK-Pdy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -80,6 +80,7 @@
         <scene sceneID="tym-Vg-swO">
             <objects>
                 <viewController id="gMT-yU-WnL" customClass="MapViewController" customModule="Passeio" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides/>
                     <view key="view" contentMode="scaleToFill" id="kIQ-gp-ws5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -104,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UAu-72-rQS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="702" y="-227"/>
+            <point key="canvasLocation" x="-172" y="-243"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="27F-bW-24V">
@@ -124,26 +125,8 @@
             </objects>
             <point key="canvasLocation" x="-171.19999999999999" y="-1012.8935532233884"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="RzC-tM-duK">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SqE-Tr-J6C" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pyt-4V-xfR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="gMT-yU-WnL" kind="relationship" relationship="rootViewController" id="s5W-1D-fUX"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ny-0I-1Et" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-171.19999999999999" y="-226.6866566716642"/>
-        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5do-Z3-kDI"/>
+        <segue reference="R2U-qK-Pdy"/>
     </inferredMetricsTieBreakers>
 </document>
